# social_media_API

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  build.sh  cypress.config.js  docker-compose.yml  generate_og_image.py  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  take_screenshots.py
.github/workflows/: ci.yml
accounts/: admin.py  api_urls.py  signals.py  tokens.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_follow_unique_together_and_more.py  0003_follow_prevent_self_follow.py
accounts/models/: __init__.py  follow.py  profile.py
accounts/serializers/: __init__.py  auth_serializer.py  follow_serializer.py  profile_serializer.py
accounts/tests/: __init__.py  test_models.py  test_views.py  test_viewsets.py
accounts/viewsets/: __init__.py  auth_viewset.py  follow_viewset.py  profile_viewset.py
books/: admin.py  api_urls.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/models/: __init__.py  book.py  trade_request.py
books/serializers/: book_serializer.py  trade_request_serializer.py
books/viewsets/: __init__.py  book_viewset.py  trade_request_viewset.py
cypress/e2e/: ant_social.cy.js
cypress/support/: e2e.js
posts/: admin.py  api_urls.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_like_unique_together_post_is_active_and_more.py  0003_add_image_to_post.py
posts/models/: __init__.py  comment.py  like.py  post.py
posts/serializers/: __init__.py  comment_serializer.py  like_serializer.py  post_serializer.py
posts/services/: feed_cache.py  moderation.py
posts/tests/: __init__.py  test_views.py  test_viewsets.py
posts/viewsets/: __init__.py  comment_viewset.py  feed_viewset.py  like_viewset.py  post_viewset.py
social_media/: asgi.py  middleware.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
static/: robots.txt
static/css/: style.css
static/js/: app.js
templates/: add_book.html  base.html  biblioteca.html  book_detail.html  create_post.html  edit_post.html  edit_profile.html  feed.html  follow_list.html  home.html  login.html  post_detail.html  profile.html  register.html  search.html
tests/: test_bugs.py  test_feed_cache.py  test_integration.py  test_moderation.py  test_serializers.py
(+5 files in other folders)
