[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = "ant.social - A minimalist anti-social-media platform"
authors = ["Vinic <vinic@ant.social>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=5.0,<7.0"
djangorestframework = ">=3.14,<4.0"
psycopg2-binary = "^2.9.10"
Pillow = ">=10.0,<12.0"
gunicorn = ">=22.0,<24.0"
drf-spectacular = ">=0.27,<1.0"
django-cors-headers = ">=4.3,<5.0"
whitenoise = ">=6.7,<7.0"
cloudinary = ">=1.40,<2.0"
django-cloudinary-storage = ">=0.3,<1.0"
requests = ">=2.31,<3.0"

[tool.poetry.group.dev.dependencies]
factory-boy = ">=3.3.3,<4.0.0"
pytest-django = ">=4.8.0,<5.0.0"
pytest-cov = ">=5.0.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
