[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = "ant.social - A minimalist anti-social-media platform"
authors = ["Vinic <vinic@ant.social>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=6.0.1,<7.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
psycopg2-binary = "^2.9.10"
Pillow = ">=11.0.0,<12.0.0"
gunicorn = ">=22.0.0,<24.0.0"
drf-spectacular = ">=0.27.0,<1.0.0"
django-cors-headers = ">=4.3.0,<5.0.0"
djangorestframework-simplejwt = ">=5.3.1,<6.0.0"
whitenoise = ">=6.7.0,<7.0.0"
cloudinary = ">=1.40.0,<2.0.0"
django-cloudinary-storage = ">=0.3.0,<1.0.0"
requests = ">=2.31.0,<3.0.0"
django-allauth = ">=65.0.0"
cryptography = ">=43.0.0"

[tool.poetry.group.dev.dependencies]
factory-boy = ">=3.3.3,<4.0.0"
pytest-django = ">=4.8.0,<5.0.0"
pytest-cov = ">=5.0.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
